FITIn: adds support for script breakpoints

--- a/fitin/CHANGES
+++ b/fitin/CHANGES
@@ -2,6 +2,7 @@ HISTORY of significant changes to FITIn
 
 2014-07:
          * Adds file locks on Linux.
+         * Adds breakpoints.
 2014-06:
          * Adds Fortran-specific scripting features.
 2014-04:
